@@ -35,6 +35,7 @@ POSSIBILITY OF SUCH DAMAGE.
 #include <vector>
 #include <boost/limits.hpp>
 #include <boost/bind.hpp>
+#include <boost/cstdint.hpp>
 #include <stdarg.h> // for va_start, va_end
 
 #include "libtorrent/peer_connection.hpp"
@@ -193,6 +194,7 @@ namespace libtorrent
 		, m_ignore_stats(false)
 		, m_corked(false)
 		, m_has_metadata(true)
+		, m_exceeded_limit(false)
 #if defined TORRENT_DEBUG || TORRENT_RELEASE_ASSERTS
 		, m_in_constructor(true)
 		, m_disconnect_started(false)
@@ -1073,6 +1075,26 @@ namespace libtorrent
 		if (m_disconnecting) return;
 		m_torrent = wpt;
 
+		if (m_exceeded_limit)
+		{
+			// find a peer in some torrent (presumably the one with most peers)
+			// and disconnect the lowest ranking peer
+			aux::session_impl::torrent_map::iterator i = std::max_element(m_ses.m_torrents.begin(), m_ses.m_torrents.end()
+				, boost::bind(&torrent::num_peers, boost::bind(&session_impl::torrent_map::value_type::second, _1))
+				< boost::bind(&torrent::num_peers, boost::bind(&session_impl::torrent_map::value_type::second, _2)));
+
+			TORRENT_ASSERT(i != m_ses.m_torrents.end());
+			if (i->second->num_peers() <= t->num_peers())
+			{
+				disconnect(errors::too_many_connections);
+				return;
+			}
+			// find the lowest ranking peer and disconnect that
+			peer_connection* p = i->second->find_lowest_ranking_peer();
+			p->disconnect(errors::too_many_connections);
+			peer_disconnected_other();
+		}
+
 		TORRENT_ASSERT(!m_torrent.expired());
 
 		// if the torrent isn't ready to accept
@@ -1088,6 +1110,11 @@ namespace libtorrent
 		TORRENT_ASSERT(m_num_pieces == 0);
 		m_have_piece.clear_all();
 		TORRENT_ASSERT(!m_torrent.expired());
+	}
+
+	boost::uint32_t peer_connection::peer_rank() const
+	{
+		return m_peer_info->rank(tcp::endpoint(m_ses.external_address(), m_ses.listen_port()));
 	}
 
 	// message handlers
