@@ -1259,6 +1259,7 @@ namespace libtorrent
 		, unchoke_slots_limit(8)
 		, half_open_limit(0)
 		, connections_limit(200)
+		, connections_slack(10)
 		, utp_target_delay(100) // milliseconds
 		, utp_gain_factor(1500) // bytes per rtt
 		, utp_min_timeout(500) // milliseconds
